# ai-pdf-extraction

./: .gitignore  README.md  docker-compose.yml  prompt-documentation.md  pyproject.toml  requirements.txt
app/backend/: Dockerfile  __init__.py  alembic.ini  config.py  database.py  main.py  models.py  models_db.py  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 4af2bab1c820_add_field_confidences_to_extractions.py  5aa2801c9ad0_add_file_content_to_documents.py  f38e78df74c3_initial_schema.py
app/backend/routers/: __init__.py  batches.py  documents.py  history.py  schemas.py  upload.py
app/backend/services/: __init__.py  ai_service.py  pdf_service.py
app/backend/services/ai/: __init__.py  discovery.py  exceptions.py  extraction.py  repair.py  validation.py
app/frontend/: .gitkeep  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  api.ts  index.css  types.ts
app/frontend/src/components/: BatchProgress.tsx  EditableResultsTable.tsx  HistoryModal.tsx  HistoryPage.tsx  LiveProgress.tsx  ResultsTable.tsx  SchemaEditor.tsx  SmartCell.tsx  UploadZone.tsx  ValidationModal.tsx  index.ts
app/test-pdfs/: .gitkeep
app/test-pdfs/Invoices/: extraction_results.csv  extraction_results.json
app/test-pdfs/SEC 8-K/: extraction_results.csv  extraction_results.json
app/test-pdfs/School attendance/: extraction_results.csv  extraction_results.json
tests/: __init__.py  conftest.py  test_ai_service.py  test_api.py  test_models.py  test_pdf_service.py
(+5 files in other folders)
